2004-07-01  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/1027
	* gcc.dg/Wswitch-enum.c, gcc.dg/Wswitch.c,
	gcc.dg/format/branch-1.c, gcc.dg/format/diag-1.c,
	gcc.dg/format/multattr-3.c, gcc.dg/format/xopen-1.c: Update
	expected warning text.
	* gcc.dg/format/diag-2.c: New test.

2004-07-01  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.c-torture/compile/20040323-1.c: XFAIL on Solaris 2.

2004-07-01  Paolo Bonzini  <bonzini@gnu.org>

	* gcc.dg/builtins-43.c: New.
	* gcc.dg/builtins-44.c: New.
	* gcc.dg/builtins-45.c: New.

2004-06-26  Geoffrey Keating  <geoffk@apple.com>
	    Andreas Tobler  <a.tobler@schweiz.ch>

	* gcc.dg/cleanup-10.c: Run on all Linux platforms and powerpc-darwin.
	Use SA_RESETHAND rather than SA_ONESHOT.  Trap SIGBUS as well
	as SIGSEGV.
	* gcc.dg/cleanup-11.c: Likewise.
	* gcc.dg/cleanup-8.c: Likewise.
	* gcc.dg/cleanup-9.c: Likewise.
	* gcc.dg/cleanup-5.c: Run on all platforms.

2004-06-30  Joseph S. Myers  <jsm@polyomino.org.uk>

	* g++.dg/warn/nonnull1.C: New test.

2004-06-30  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/compat/compat-common.h: Wrap up CINT in
	an #ifndef SKIP_COMPLEX_INT/#endif pair.
	Special-case the Sun compiler wrt to <complex.h>.

2004-06-30  Nitin Yewale <nitiny@kpitcummins.com>

	* gcc.dg/Wunreachable-8.C: New test.

	* gcc.dg/h8300-ice2.c : New test.

2004-06-30  Tobias Schlueter  <tobias.shclueter@physik.uni-muenchen.de>

	PR fortran/16161
	* gfortran.fortran-torture/compile/implicit.f90: Add test
	for implicit character.

2004-06-30  David Billinghurst (David.Billinghurst@riotinto.com)

 	PR fortran/16289
 	* gfortran.fortran-torture/execute/intrinsic_nearest.f90
 	Use tiny() intrinsic to find smallest non-negative real

2004-06-30  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/compat/struct-by-value-22_main.c: New test.
	* gcc.dg/compat/struct-by-value-22_x.c: New.
	* gcc.dg/compat/struct-by-value-22_y.c: New.

	* gcc.c-torture/execute/20040629-1.c: New test.
